@@ -1,10 +1,14 @@
 Next version
 ------------
 
+Compilers:
+- PR#5634: parsetree rewriter (-ppx flag)
+
 Bug fixes:
 - PR#5327: (Windows) Unix.select blocks if same socket listed in first and
   third arguments
 - PR#5551: Avoid repeated lookups for missing cmi files
+
 
 OCaml 4.00.0:
 -------------
